--- a/app/src/main/res/layout/activity_likvid_calc_fason_cast.xml
+++ b/app/src/main/res/layout/activity_likvid_calc_fason_cast.xml
@@ -9,151 +9,178 @@
     android:id="@+id/percent">
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView"
         android:layout_below="@+id/percent"
         android:layout_toEndOf="@id/percent"
         android:text="@string/C"
         app:layout_marginLeftPercent="1%"
-        app:layout_marginTopPercent="1%" />
+        app:layout_marginTopPercent="1%"/>
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText"
         android:layout_alignTop="@+id/textView"
         android:layout_toEndOf="@id/textView" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView1"
         android:layout_alignTop="@+id/editText"
         android:layout_toEndOf="@id/editText"
         android:text="@string/Si" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText1"
         android:layout_alignTop="@+id/textView1"
         android:layout_toEndOf="@id/textView1" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView2"
         android:text="@string/Mn"
         android:layout_alignTop="@+id/editText1"
         android:layout_toEndOf="@id/editText1" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText2"
         android:layout_alignTop="@+id/textView2"
         android:layout_toEndOf="@id/textView2" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView3"
         android:layout_below="@+id/textView"
         android:text="@string/P"
         app:layout_marginLeftPercent="1%" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText3"
         android:layout_alignTop="@+id/textView3"
         android:layout_toEndOf="@id/textView3" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView4"
         android:layout_alignTop="@+id/editText3"
         android:layout_toEndOf="@id/editText3"
         android:text="@string/S" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText4"
         android:layout_alignTop="@+id/textView4"
         android:layout_toEndOf="@id/textView4" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView5"
         android:layout_alignTop="@+id/editText4"
         android:layout_toEndOf="@id/editText4"
         android:text="@string/Cr" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText5"
         android:layout_alignTop="@+id/textView5"
         android:layout_toEndOf="@id/textView5" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView6"
         android:layout_below="@+id/textView3"
         android:text="@string/Ni"
         app:layout_marginLeftPercent="1%" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText6"
         android:layout_alignTop="@+id/textView6"
         android:layout_toEndOf="@id/textView6" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView7"
         android:text="@string/Cu"
         android:layout_alignTop="@+id/editText6"
         android:layout_toEndOf="@id/editText6" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText7"
         android:layout_alignTop="@+id/textView7"
         android:layout_toEndOf="@id/textView7" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView8"
         android:text="@string/Al"
         android:layout_alignTop="@+id/editText7"
         android:layout_toEndOf="@id/editText7" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText8"
         android:layout_alignTop="@+id/textView8"
         android:layout_toEndOf="@id/textView8" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView9"
         android:layout_below="@+id/textView6"
         android:text="@string/Ti"
         app:layout_marginLeftPercent="1%" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText9"
         android:layout_alignTop="@+id/textView9"
         android:layout_toEndOf="@id/textView9" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView10"
         android:layout_alignTop="@+id/editText9"
         android:layout_toEndOf="@id/editText9"
         android:text="@string/V" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText10"
         android:layout_alignTop="@+id/textView10"
         android:layout_toEndOf="@id/textView10" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView11"
         android:layout_alignTop="@+id/editText10"
         android:layout_toEndOf="@id/editText10"
         android:text="@string/Mo" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText11"
         android:layout_alignTop="@+id/textView11"
         android:layout_toEndOf="@id/textView11" />
 
     <TextView
+        style="@style/CustomTextView"
         android:id="@+id/textView12"
         android:layout_below="@+id/textView9"
         android:layout_toEndOf="@id/editText9"
         android:text="@string/Ti" />
 
     <EditText
+        style="@style/CustomEditText"
         android:id="@+id/editText12"
         android:layout_alignTop="@+id/textView12"
         android:layout_toEndOf="@id/textView12" />
 
     <Button
+        style="@style/CustomButton"
         android:id="@+id/btn_Calc"
         android:layout_below="@+id/textView12"
         android:text="@string/calculate"
