--- a/app/src/main/res/layout/activity_likvid_calc_menu.xml
+++ b/app/src/main/res/layout/activity_likvid_calc_menu.xml
@@ -8,6 +8,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Menu">
 
     <Button
+        style="@style/CustomButton"
         android:id="@+id/button"
         android:onClick="openLikvidCalcFasonCast"
         android:text="@string/likvid_calc_menu_button1"
@@ -17,6 +18,7 @@
         tools:ignore="NotSibling" />
 
     <Button
+        style="@style/CustomButton"
         android:id="@+id/button1"
         android:layout_alignTop="@+id/button"
         android:layout_toEndOf="@id/button"
@@ -26,12 +28,14 @@
         app:layout_marginRightPercent="2%" />
 
     <Button
+        style="@style/CustomButton"
         android:id="@+id/button2"
         android:layout_below="@+id/button"
         android:layout_alignStart="@+id/button"
         android:text="@string/likvid_calc_main_menu_button3" />
 
     <Button
+        style="@style/CustomButton"
         android:id="@+id/button3"
         android:layout_below="@+id/button1"
         android:layout_alignStart="@+id/button1"
