--- a/app/src/main/res/layout/activity_likvid_calc_fason_cast.xml
+++ b/app/src/main/res/layout/activity_likvid_calc_fason_cast.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LikvidCalcFasonCast"
+    tools:context=".activity.LikvidCalcFasonCast"
     android:theme="@style/ThemeOverlay.AppCompat.LikvidCalc"
     android:id="@+id/percent">
 
