--- a/app/src/main/res/layout/activity_likvid_calc_ingot.xml
+++ b/app/src/main/res/layout/activity_likvid_calc_ingot.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LikvidCalcIngot">
+    tools:context=".activity.LikvidCalcIngot">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
