--- a/app/src/main/res/layout/activity_likvid_manual.xml
+++ b/app/src/main/res/layout/activity_likvid_manual.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LikvidManual">
+    tools:context=".activity.LikvidManual">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
