--- a/app/src/main/res/layout/save_list_item.xml
+++ b/app/src/main/res/layout/save_list_item.xml
@@ -28,8 +28,9 @@
         app:layout_constraintTop_toBottomOf="@+id/name" />
     <TextView
         android:id="@+id/date"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="100dp"
         android:layout_marginRight="-5dp"
         android:text="Дата"
         android:textColor="@color/darkRed"
@@ -41,9 +42,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
+        android:layout_marginLeft="10dp"
         android:text="Результат"
         android:textColor="@color/black"
-        app:layout_constraintRight_toRightOf="@+id/date"
+        app:layout_constraintLeft_toLeftOf="@+id/date"
         app:layout_constraintTop_toBottomOf="@+id/date"/>
 
     <ImageView
@@ -51,17 +53,8 @@
         android:layout_width="40dp"
         android:layout_height="30dp"
         android:layout_marginTop="6dp"
-        android:src="@drawable/ic_more24"
+        android:src="@drawable/ic_more32"
         app:layout_constraintTop_toTopOf="@+id/name"
         app:layout_constraintRight_toRightOf="parent"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="6dp"
-        android:background="@android:color/black"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@+id/description"
-        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
