--- a/app/src/main/res/layout/likvidus_character_list_item.xml
+++ b/app/src/main/res/layout/likvidus_character_list_item.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="150dp"
-    android:layout_height="50dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/LikvidCalcNameOfCharacter"
-        android:layout_width="50dp"
-        android:layout_height="match_parent"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Н"
+        android:textSize="25sp"
         android:textColor="@color/black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/LikvidCalcValueOfCharacter"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text=".0"
+        android:textSize="20sp"
         app:layout_constraintLeft_toRightOf="@+id/LikvidCalcNameOfCharacter"
         app:layout_constraintTop_toTopOf="@+id/LikvidCalcNameOfCharacter" />
 
