--- a/app/src/main/res/layout/activity_likvid_calc.xml
+++ b/app/src/main/res/layout/activity_likvid_calc.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <androidx.recyclerview.widget.RecyclerView
@@ -19,86 +20,117 @@
         android:id="@+id/calcButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/calculate"
         android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@id/calcList"
+        android:onClick="calculate"
+        android:text="@string/calculate"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/calcList" />
 
     <ImageButton
         android:id="@+id/saveButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@null"
+        android:onClick="save"
         android:src="@drawable/save32"
         app:layout_constraintLeft_toRightOf="@id/calcButton"
-        app:layout_constraintTop_toTopOf="@id/calcButton" />
+        app:layout_constraintTop_toTopOf="@id/calcButton"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/resultDescriptionText"
-        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_width="0dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/calcButton"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintWidth_percent="0.7"
         />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@+id/resultDescriptionText"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/resultValueText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/resultDescriptionText"
         app:layout_constraintLeft_toRightOf="@id/resultDescriptionText"
+        app:layout_constraintWidth_percent="0.3"
         />
 
     <TextView
         android:id="@+id/resultDescriptionText1"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/resultDescriptionText"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintWidth_percent="0.5"
         />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@+id/resultDescriptionText1"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/resultValueText1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/resultDescriptionText1"
         app:layout_constraintLeft_toRightOf="@id/resultDescriptionText1"
+        app:layout_constraintWidth_percent="0.25"
         />
 
     <TextView
         android:id="@+id/resultValueText2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/resultValueText1"
         app:layout_constraintLeft_toRightOf="@id/resultValueText1"
+        app:layout_constraintWidth_percent="0.25"
         />
 
     <TextView
         android:id="@+id/resultDescriptionText2"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/resultDescriptionText1"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintWidth_percent="0.5"
         />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"
+        app:layout_constraintTop_toBottomOf="@+id/resultDescriptionText2"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/resultValueText3"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/resultDescriptionText2"
         app:layout_constraintLeft_toRightOf="@id/resultDescriptionText2"
+        app:layout_constraintWidth_percent="0.25"
         />
 
     <TextView
         android:id="@+id/resultValueText4"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/resultValueText3"
         app:layout_constraintLeft_toRightOf="@id/resultValueText3"
+        app:layout_constraintWidth_percent="0.25"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
