--- a/app/src/main/res/layout/likvidus_character_list_item.xml
+++ b/app/src/main/res/layout/likvidus_character_list_item.xml
@@ -24,6 +24,7 @@
         android:text=".0"
         android:textSize="20sp"
         app:layout_constraintLeft_toRightOf="@+id/LikvidCalcNameOfCharacter"
-        app:layout_constraintTop_toTopOf="@+id/LikvidCalcNameOfCharacter" />
+        app:layout_constraintTop_toTopOf="@+id/LikvidCalcNameOfCharacter"
+        android:inputType="number"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
