добавил dimens.xml, calc_unit_input_item.xml, dimens.xml, rounded_card.xml, заредачил оормление немного и в зависимостях navigation component

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -59,4 +59,15 @@
 
     <style name="CustomButton">
     </style>
+
+    <style name="CustomPrimaryTextView." parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:textSize">@dimen/t3</item>
+    </style>
+
+    <style name="CustomEditText." parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">@color/secondaryElementsColor</item>
+        <item name="android:textColorHint">@color/secondaryElementsColor</item>
+        <item name="android:textSize">@dimen/t2</item>
+    </style>
 </resources>
